# philosopher

./: CMakeLists.txt  main.c
src/: config.h
src/init/: util.c  util.h
src/input/: input.c  input.h
src/philosopher/: philosopher.c  philosopher.h
test/: deadlock.txt  non-deadlock.txt
